--- a/apps/nginx/deployment.yaml
+++ b/apps/nginx/deployment.yaml
@@ -1,19 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: app1
+  name: nginx
+  namespace: nginx
 spec:
-  replicas: 3
+  replicas: 2
   selector:
     matchLabels:
-      app: app1
+      app: nginx
   template:
     metadata:
       labels:
-        app: app1
+        app: nginx
     spec:
       containers:
-        - name: app1
-          image: your-docker-repo/app1:latest
+        - name: nginx
+          image: nginx:latest
           ports:
             - containerPort: 80
