--- a/apps/nginx/app.yaml
+++ b/apps/nginx/app.yaml
@@ -2,14 +2,10 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: nginx
-  namespace: web
+  namespace: argocd 
 spec:
-  project: default
-  source:
-    path: apps/nginx
   destination:
     namespace: nginx
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+    server: https://kubernetes.default.svc
+  syncOptions:
+    - CreateNamespace=true
