--- a/apps/nginx/deployment.yaml
+++ b/apps/nginx/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx
-  namespace: web
+  namespace: nginx  # Ensure this matches the target namespace
 spec:
   replicas: 2
   selector:
