--- a/argocd/app-of-apps.yml
+++ b/argocd/app-of-apps.yml
@@ -8,7 +8,7 @@ spec:
     server: https://kubernetes.default.svc
     namespace: argocd
   source:
-    repoURL: 'https://github.com/xxx/homelab.git'
+    repoURL: 'git@github.com:theepicsaxguy/argocd-app-of-apps.git'
     path: argocd
     targetRevision: HEAD
   project: default
