--- a/argocd/argocd-app.yml
+++ b/argocd/argocd-app.yml
@@ -1,15 +1,15 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: manage-argocd
+  name: bootstrap-argocd
   namespace: argocd
 spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
   source:
-    repoURL: 'https://github.com/xxx/homelab.git'
-    path: namespaces
+    repoURL: 'https://github.com/theepicsaxguy/argocd-app-of-apps.git'
+    path: argocd
     targetRevision: HEAD
   project: default
   syncPolicy:
