--- a/argocd/namespaces-app.yml
+++ b/argocd/namespaces-app.yml
@@ -1,15 +1,15 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: bootstrap-argocd
+  name: namespaces
   namespace: argocd
 spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
   source:
-    repoURL: 'https://github.com/theepicsaxguy/argocd-app-of-apps.git'
-    path: argocd
+    repoURL: 'git@github.com:theepicsaxguy/argocd-app-of-apps.git'
+    path: namespaces
     targetRevision: HEAD
   project: default
   syncPolicy:
