--- a/argocd/apps-app.yml
+++ b/argocd/apps-app.yml
@@ -11,6 +11,8 @@ spec:
     repoURL: 'git@github.com:theepicsaxguy/argocd-app-of-apps.git'
     path: apps
     targetRevision: HEAD
+    directory:
+      recurse: true
   project: default
   syncPolicy:
     automated:
