Add configuration files for Gitleaks, linters, and Tailscale; update ArgoCD app specifications

--- a/argocd/apps-app.yml
+++ b/argocd/apps-app.yml
@@ -13,6 +13,8 @@ spec:
     targetRevision: HEAD
     directory:
       recurse: true
+      exclude: '{config.json,wireguard/*}'
+      include: '*.yaml, *.yml'
   project: default
   syncPolicy:
     automated:
