--- a/argocd/apps-app.yml
+++ b/argocd/apps-app.yml
@@ -10,11 +10,11 @@ spec:
   source:
     repoURL: 'git@github.com:theepicsaxguy/argocd-app-of-apps.git'
     path: apps
-    targetRevision: HEAD
+    targetRevision: master
     directory:
       recurse: true
       exclude: '{config.json,wireguard/*}'
-      include: '*.yaml, *.yml'
+      include: '*.yaml,*.yml'
   project: default
   syncPolicy:
     automated:
