--- a/argocd/apps-app.yml
+++ b/argocd/apps-app.yml
@@ -10,7 +10,7 @@ spec:
   source:
     repoURL: 'git@github.com:theepicsaxguy/argocd-app-of-apps.git'
     path: apps
-    targetRevision: master
+    targetRevision: main
     directory:
       recurse: true
       exclude: '{config.json,wireguard/*}'
