--- a/argocd/app-of-apps.yml
+++ b/argocd/app-of-apps.yml
@@ -10,7 +10,7 @@ spec:
   source:
     repoURL: 'git@github.com:theepicsaxguy/argocd-app-of-apps.git'
     path: argocd
-    targetRevision: HEAD
+    targetRevision: main
   project: default
   syncPolicy:
     automated:
