Update ArgoCD syncPolicy to allow empty syncs

--- a/argocd/apps-app.yml
+++ b/argocd/apps-app.yml
@@ -17,6 +17,7 @@ spec:
       include: '*.yaml,*.yml'
   project: default
   syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+    automated: 
+      prune: true 
+      allowEmpty: true
+      selfHeal: true 
