--- a/argocd/app-of-apps.yml
+++ b/argocd/app-of-apps.yml
@@ -13,8 +13,9 @@ spec:
     targetRevision: main
   project: default
   syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+    automated: 
+      prune: true 
+      allowEmpty: true
+      selfHeal: true 
     syncOptions:
       - CreateNamespace=true
