--- a/argocd/namespaces-app.yml
+++ b/argocd/namespaces-app.yml
@@ -13,6 +13,7 @@ spec:
     targetRevision: HEAD
   project: default
   syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+    automated: 
+      prune: true 
+      allowEmpty: true
+      selfHeal: true 
