--- a/apps/system/external-dns/deployment.yaml
+++ b/apps/system/external-dns/deployment.yaml
@@ -1,78 +1,78 @@
----
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: external-dns
-  namespace: external-dns
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: external-dns
-rules:
-- apiGroups: [""]
-  resources: ["services","endpoints","pods"]
-  verbs: ["get","watch","list"]
-- apiGroups: ["extensions","networking.k8s.io"]
-  resources: ["ingresses"]
-  verbs: ["get","watch","list"]
-- apiGroups: [""]
-  resources: ["nodes"]
-  verbs: ["list","watch"]
-- apiGroups: ["externaldns.k8s.io"]
-  resources: ["dnsendpoints"]
-  verbs: ["get","watch","list"]
-- apiGroups: ["externaldns.k8s.io"]
-  resources: ["dnsendpoints/status"]
-  verbs: ["update"]
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: external-dns-viewer
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: external-dns
-subjects:
-- kind: ServiceAccount
-  name: external-dns
-  namespace: external-dns
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: external-dns
-  namespace: external-dns
-spec:
-  strategy:
-    type: Recreate
-  selector:
-    matchLabels:
-      app: external-dns
-  template:
-    metadata:
-      labels:
-        app: external-dns
-    spec:
-      serviceAccountName: external-dns
-      containers:
-      - name: external-dns
-        image: registry.k8s.io/external-dns/external-dns:v0.13.6
-        # If authentication is disabled and/or you didn't create
-        # a secret, you can remove this block.
-        env:
-        - name: CF_API_TOKEN
-          valueFrom:
-            secretKeyRef:
-              name: cloudflare-creds
-              key: api_token
-        args:
-        - --source=ingress
-        - --source=crd
-        - --source=service
-        - --domain-filter=cboxlab.com
-        - --policy=upsert-only
-        - --provider=cloudflare
-      securityContext:
-        fsGroup: 65534 # For ExternalDNS to be able to read Kubernetes token files
+# ---
+# apiVersion: v1
+# kind: ServiceAccount
+# metadata:
+#   name: external-dns
+#   namespace: external-dns
+# ---
+# apiVersion: rbac.authorization.k8s.io/v1
+# kind: ClusterRole
+# metadata:
+#   name: external-dns
+# rules:
+# - apiGroups: [""]
+#   resources: ["services","endpoints","pods"]
+#   verbs: ["get","watch","list"]
+# - apiGroups: ["extensions","networking.k8s.io"]
+#   resources: ["ingresses"]
+#   verbs: ["get","watch","list"]
+# - apiGroups: [""]
+#   resources: ["nodes"]
+#   verbs: ["list","watch"]
+# - apiGroups: ["externaldns.k8s.io"]
+#   resources: ["dnsendpoints"]
+#   verbs: ["get","watch","list"]
+# - apiGroups: ["externaldns.k8s.io"]
+#   resources: ["dnsendpoints/status"]
+#   verbs: ["update"]
+# ---
+# apiVersion: rbac.authorization.k8s.io/v1
+# kind: ClusterRoleBinding
+# metadata:
+#   name: external-dns-viewer
+# roleRef:
+#   apiGroup: rbac.authorization.k8s.io
+#   kind: ClusterRole
+#   name: external-dns
+# subjects:
+# - kind: ServiceAccount
+#   name: external-dns
+#   namespace: external-dns
+# ---
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: external-dns
+#   namespace: external-dns
+# spec:
+#   strategy:
+#     type: Recreate
+#   selector:
+#     matchLabels:
+#       app: external-dns
+#   template:
+#     metadata:
+#       labels:
+#         app: external-dns
+#     spec:
+#       serviceAccountName: external-dns
+#       containers:
+#       - name: external-dns
+#         image: registry.k8s.io/external-dns/external-dns:v0.13.6
+#         # If authentication is disabled and/or you didn't create
+#         # a secret, you can remove this block.
+#         env:
+#         - name: CF_API_TOKEN
+#           valueFrom:
+#             secretKeyRef:
+#               name: cloudflare-creds
+#               key: api_token
+#         args:
+#         - --source=ingress
+#         - --source=crd
+#         - --source=service
+#         - --domain-filter=cboxlab.com
+#         - --policy=upsert-only
+#         - --provider=cloudflare
+#       securityContext:
+#         fsGroup: 65534 # For ExternalDNS to be able to read Kubernetes token files
