--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,28 @@ aggregated_output.json
 
 !apps/argocd/base/utilities/sealed.yaml
 docs/site/node_modules/**/*
+charts
+k0s_backup_*.tar.gz
+*.log
+secrets.txt
+
+# OpenTF
+*.tfvars
+.terraform
+proxmox/tofu
+
+# Talos
+talsecret.yaml
+kubeconfig
+talosconfig
+talos/clusterconfig
+
+
+
+# migration to kustomize.
+apps
+apps/**
+argocd
+argocd/**
+appsets
+appsets/**
