--- a/.gitignore
+++ b/.gitignore
@@ -106,7 +106,7 @@ aggregated_output.json
 !apps/argocd/base/utilities/sealed.yaml
 docs/site/node_modules/**/*
 charts
-k0s_backup_*.tar.gz
+k3s_backup_*.tar.gz
 *.log
 secrets.txt
 
@@ -130,3 +130,4 @@ argocd
 argocd/**
 appsets
 appsets/**
+prompt.md
