--- a/helm-charts/generic-service/templates/ingress-public.yaml
+++ b/helm-charts/generic-service/templates/ingress-public.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     {{- include "generic-service.labels" . | nindent 4 }}
   annotations:
-    external-dns.alpha.kubernetes.io/target: vps.wagner.gg
+    external-dns.alpha.kubernetes.io/target: vps.pc-tips.se
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
     # rate limiting
     nginx.ingress.kubernetes.io/limit-connections: "10"
