--- a/.github/workflows/renovate.yaml
+++ b/.github/workflows/renovate.yaml
@@ -4,6 +4,11 @@ on:
     branches: ["main"]
   pull_request:
     branches: ["main"]
+
 jobs:
-- name: Renovate Bot GitHub Action
-  uses: renovatebot/github-action@9ad1a8e771c002ece340d1ff028fae4503fe041b # v41.0.12
+  renovate:
+    name: Renovate Bot GitHub Action
+    runs-on: ubuntu-latest
+    steps:
+      - name: Run Renovate
+        uses: renovatebot/github-action@9ad1a8e771c002ece340d1ff028fae4503fe041b # v41.0.12
