--- a/bootstrap/argo-cd.yaml
+++ b/bootstrap/argo-cd.yaml
@@ -1,7 +1,6 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  creationTimestamp: null
   labels:
     app.kubernetes.io/managed-by: argocd-autopilot
     app.kubernetes.io/name: argo-cd
@@ -12,21 +11,22 @@ spec:
     namespace: argocd
     server: https://kubernetes.default.svc
   ignoreDifferences:
-  - group: argoproj.io
-    jsonPointers:
-    - /status
-    kind: Application
+    - group: argoproj.io
+      kind: Application
+      jsonPointers:
+        - /status
   project: default
   source:
     path: bootstrap/argo-cd
     repoURL: https://github.com/theepicsaxguy/argotest.git
+    targetRevision: main
   syncPolicy:
     automated:
       allowEmpty: true
       prune: true
       selfHeal: true
     syncOptions:
-    - allowEmpty=true
+      - allowEmpty=true
 status:
   health: {}
   summary: {}
